--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>تكنو تل</title>
+  <title>محل الموبايلات</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" />
 </head>
 <body class="bg-light">
   <nav class="navbar navbar-dark bg-dark mb-4">
     <div class="container d-flex justify-content-between align-items-center">
-      <span class="navbar-brand mb-0 h1">تكنو تل -TECHNO TEL</span>
+      <span class="navbar-brand mb-0 h1">منتجات الموبايلات</span>
       <input id="search" type="text" class="form-control w-50" placeholder="ابحث عن منتج..." oninput="searchProducts()" />
     </div>
   </nav>  <div class="container">
@@ -28,7 +28,7 @@
 </div>
 
   </div>  <footer class="text-center py-4 mt-4 bg-dark text-white">
-    <p>© 2025 MAZEN</p>
+    <p>© 2025 محل الموبايلات</p>
   </footer>
   <script>
     // اسم ملف التخزين داخل GitHub
