--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
 
     <style>
-        body {
-            font-family: 'Cairo', sans-serif;
-            background: #f3f5f7;
-        }
+        body { font-family: 'Cairo', sans-serif; background: #f3f5f7; }
 
-        /* --- الهيدر --- */
         .navbar {
             background: linear-gradient(90deg, #007bff, #0056d6);
             padding: 15px 0;
@@ -26,10 +22,8 @@
             color: #fff !important;
             font-size: 28px;
             font-weight: 700;
-            letter-spacing: 1px;
         }
 
-        /* --- الهيرو --- */
         .hero {
             background: linear-gradient(135deg, #0056d6, #0090ff);
             color: #fff;
@@ -38,16 +32,7 @@
             text-align: center;
             margin-top: 20px;
         }
-        .hero h1 {
-            font-size: 40px;
-            font-weight: 700;
-        }
-        .hero p {
-            font-size: 18px;
-            margin-top: 10px;
-        }
 
-        /* --- بطاقات المنتجات --- */
         .product-card {
             border-radius: 18px;
             overflow: hidden;
@@ -59,14 +44,13 @@
             transform: translateY(-6px);
             box-shadow: 0 8px 25px rgba(0,0,0,0.12);
         }
-        .product-card img {
-            border-bottom: 1px solid #eee;
-        }
+
         .price {
             font-size: 22px;
             color: #e91e63;
             font-weight: bold;
         }
+
         .btn-whatsapp {
             background: #25D366;
             color: white;
@@ -77,7 +61,6 @@
             color: #fff;
         }
 
-        /* --- الفوتر --- */
         footer {
             background: #0d6efd;
             color: #fff;
@@ -104,13 +87,87 @@
     </div>
 </div>
 
+<!-- Search Bar -->
+<div class="container mt-4">
+    <input id="searchInput" type="text" class="form-control form-control-lg text-center"
+           placeholder="ابحث عن جهاز... مثال: iPhone, Samsung, A54"
+           onkeyup="searchProducts()">
+</div>
+
 <!-- Products -->
 <div class="container mt-5">
-    <div class="row g-4">
+    <div class="row g-4" id="productList">
 
         <!-- Product 1 -->
-        <div class="col-md-4">
+        <div class="col-md-4 product-item" data-name="Samsung S22">
             <div class="product-card">
+                <img src="images/s22.jpg" class="img-fluid" alt="Samsung S22">
+                <div class="p-3">
+                    <h4>Samsung S22</h4>
+                    <div class="price">550$</div>
+                    <a href="https://wa.me/963934090901?text=أريد%20شراء%20Samsung%20S22"
+                       target="_blank"
+                       class="btn btn-whatsapp w-100 mt-3">
+                        اطلب عبر واتساب
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Product 2 -->
+        <div class="col-md-4 product-item" data-name="iPhone 14">
+            <div class="product-card">
+                <img src="images/iphone14.jpg" class="img-fluid" alt="iPhone 14">
+                <div class="p-3">
+                    <h4>iPhone 14</h4>
+                    <div class="price">800$</div>
+                    <a href="https://wa.me/963934090901?text=أريد%20شراء%20iPhone%2014"
+                       target="_blank"
+                       class="btn btn-whatsapp w-100 mt-3">
+                        اطلب عبر واتساب
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Product 3 -->
+        <div class="col-md-4 product-item" data-name="Samsung A54">
+            <div class="product-card">
+                <img src="images/a54.jpg" class="img-fluid" alt="Samsung A54">
+                <div class="p-3">
+                    <h4>Samsung A54</h4>
+                    <div class="price">300$</div>
+                    <a href="https://wa.me/963934090901?text=أريد%20شراء%20Samsung%20A54"
+                       target="_blank"
+                       class="btn btn-whatsapp w-100 mt-3">
+                        اطلب عبر واتساب
+                    </a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<footer>
+    © 2025 تكنو تل — جميع الحقوق محفوظة
+</footer>
+
+<!-- Search Script -->
+<script>
+function searchProducts() {
+    let input = document.getElementById('searchInput').value.toLowerCase();
+    let items = document.getElementsByClassName('product-item');
+
+    for (let i = 0; i < items.length; i++) {
+        let name = items[i].getAttribute('data-name').toLowerCase();
+        items[i].style.display = name.includes(input) ? "block" : "none";
+    }
+}
+</script>
+
+</body>
+</html>            <div class="product-card">
                 <img src="Techno1/IMG_20251107_204548.jpg" class="img-fluid" alt="Samsung S22">
                 <div class="p-3">
                     <h4>Samsung S22</h4>
