--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <!-- Product 3 -->
         <div class="col-md-4 product-item" data-name="Samsung A54">
             <div class="product-card">
-                <img src="images/a54.jpg" class="img-fluid" alt="Samsung A54">
+                <img src="images/IMG_20251107_204556.jpg" class="img-fluid" alt="Samsung A54">
                 <div class="p-3">
                     <h4>Samsung A54</h4>
                     <div class="price">300$</div>
