--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ function searchProducts() {
 
 </body>
 </html>            <div class="product-card">
-                <img src="Techno1/IMG_20251107_204548.jpg" class="img-fluid" alt="Samsung S22">
+                <img src="https://ibb.co/VcxDPkS7" class="img-fluid" alt="Samsung S22">
                 <div class="p-3">
                     <h4>Samsung S22</h4>
                     <div class="price">550$</div>
