--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 <div class="container mt-5">
     <div class="row g-4" id="productList">
 
-        <!-- Product 1 -->
+        <!-- Product 1 (الصورة الجديدة) -->
         <div class="col-md-4 product-item" data-name="Samsung S22">
             <div class="product-card">
-                <img src="images/s22.jpg" class="img-fluid" alt="Samsung S22">
+                <img src="https://i.ibb.co/VcxDPkS7/IMG-20251123-121257.jpg" class="img-fluid" alt="Samsung S22">
                 <div class="p-3">
                     <h4>Samsung S22</h4>
                     <div class="price">550$</div>
@@ -117,7 +117,7 @@
         <!-- Product 2 -->
         <div class="col-md-4 product-item" data-name="iPhone 14">
             <div class="product-card">
-                <img src="images/iphone14.jpg" class="img-fluid" alt="iPhone 14">
+                <img src="https://i.ibb.co/album/iPhone14.jpg" class="img-fluid" alt="iPhone 14">
                 <div class="p-3">
                     <h4>iPhone 14</h4>
                     <div class="price">800$</div>
@@ -133,7 +133,7 @@
         <!-- Product 3 -->
         <div class="col-md-4 product-item" data-name="Samsung A54">
             <div class="product-card">
-                <img src="images/a54.jpg" class="img-fluid" alt="Samsung A54">
+                <img src="https://i.ibb.co/album/A54.jpg" class="img-fluid" alt="Samsung A54">
                 <div class="p-3">
                     <h4>Samsung A54</h4>
                     <div class="price">300$</div>
@@ -165,60 +165,6 @@ function searchProducts() {
     }
 }
 </script>
-
-</body>
-</html>            <div class="product-card">
-                <img src="https://ibb.co/VcxDPkS7" class="img-fluid" alt="Samsung S22">
-                <div class="p-3">
-                    <h4>Samsung S22</h4>
-                    <div class="price">550$</div>
-                    <a href="https://wa.me/+963934090901?text=أريد%20شراء%20Samsung%20S22"
-                       target="_blank"
-                       class="btn btn-whatsapp w-100 mt-3">
-                        اطلب عبر واتساب
-                    </a>
-                </div>
-            </div>
-        </div>
-
-        <!-- Product 2 -->
-        <div class="col-md-4">
-            <div class="product-card">
-                <img src="images/iphone14.jpg" class="img-fluid" alt="iPhone 14">
-                <div class="p-3">
-                    <h4>iPhone 14</h4>
-                    <div class="price">800$</div>
-                    <a href="https://wa.me/+963934090901?text=أريد%20شراء%20iPhone%2014"
-                       target="_blank"
-                       class="btn btn-whatsapp w-100 mt-3">
-                        اطلب عبر واتساب
-                    </a>
-                </div>
-            </div>
-        </div>
-
-        <!-- Product 3 -->
-        <div class="col-md-4">
-            <div class="product-card">
-                <img src="images/a54.jpg" class="img-fluid" alt="Samsung A54">
-                <div class="p-3">
-                    <h4>Samsung A54</h4>
-                    <div class="price">300$</div>
-                    <a href="https://wa.me/+963934090901?text="
-                       target="_blank"
-                       class="btn btn-whatsapp w-100 mt-3">
-                        اطلب عبر واتساب
-                    </a>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
-
-<footer>
-    © 2025 تكنو تل — جميع الحقوق محفوظة
-</footer>
 
 </body>
 </html>
