--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
             box-shadow: 0 8px 25px rgba(0,0,0,0.12);
         }
 
+        /* الصورة الآن كبيرة واحترافية */
+        .product-card img {
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+            border-bottom: 1px solid #ddd;
+        }
+
         .price {
             font-size: 22px;
             color: #e91e63;
@@ -101,7 +109,7 @@
         <!-- Product 1 (الصورة الجديدة) -->
         <div class="col-md-4 product-item" data-name="Samsung S22">
             <div class="product-card">
-                <img src="https://i.ibb.co/VcxDPkS7/IMG-20251123-121257.jpg" class="img-fluid" alt="Samsung S22">
+                <img src="https://i.ibb.co/VcxDPkS7/IMG-20251123-121257.jpg" alt="Samsung S22">
                 <div class="p-3">
                     <h4>Samsung S22</h4>
                     <div class="price">550$</div>
@@ -117,7 +125,7 @@
         <!-- Product 2 -->
         <div class="col-md-4 product-item" data-name="iPhone 14">
             <div class="product-card">
-                <img src="https://i.ibb.co/album/iPhone14.jpg" class="img-fluid" alt="iPhone 14">
+                <img src="https://i.ibb.co/album/iPhone14.jpg" alt="iPhone 14">
                 <div class="p-3">
                     <h4>iPhone 14</h4>
                     <div class="price">800$</div>
@@ -133,7 +141,7 @@
         <!-- Product 3 -->
         <div class="col-md-4 product-item" data-name="Samsung A54">
             <div class="product-card">
-                <img src="https://i.ibb.co/album/A54.jpg" class="img-fluid" alt="Samsung A54">
+                <img src="https://i.ibb.co/album/A54.jpg" alt="Samsung A54">
                 <div class="p-3">
                     <h4>Samsung A54</h4>
                     <div class="price">300$</div>
