--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>تكنو تل – متجر الموبايلات</title>
 
-    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
 
     <style>
@@ -45,7 +42,6 @@
             box-shadow: 0 8px 25px rgba(0,0,0,0.12);
         }
 
-        /* الصورة الآن كبيرة واحترافية */
         .product-card img {
             width: 100%;
             height: 300px;
@@ -64,10 +60,6 @@
             color: white;
             font-size: 18px;
         }
-        .btn-whatsapp:hover {
-            background: #1ebe5d;
-            color: #fff;
-        }
 
         footer {
             background: #0d6efd;
@@ -76,8 +68,23 @@
             margin-top: 50px;
             text-align: center;
         }
+
+        /* أزرار الفلاتر */
+        .filter-btn {
+            background: #0056d6;
+            color: #fff;
+            border: none;
+            padding: 10px 16px;
+            border-radius: 10px;
+            margin: 5px;
+            font-size: 16px;
+        }
+        .filter-btn:hover {
+            background: #003c9d;
+        }
     </style>
 </head>
+
 <body>
 
 <!-- Navbar -->
@@ -95,61 +102,83 @@
     </div>
 </div>
 
-<!-- Search Bar -->
+<!-- Search -->
 <div class="container mt-4">
     <input id="searchInput" type="text" class="form-control form-control-lg text-center"
-           placeholder="ابحث عن جهاز... مثال: iPhone, Samsung, A54"
+           placeholder="ابحث عن جهاز..."
            onkeyup="searchProducts()">
+</div>
+
+<!-- Filter Buttons -->
+<div class="container text-center mt-4">
+    <button class="filter-btn" onclick="filterProducts('all')">كل المنتجات</button>
+    <button class="filter-btn" onclick="filterProducts('mobiles')">موبايلات</button>
+    <button class="filter-btn" onclick="filterProducts('bluetooth')">سماعات بلوتوث</button>
+    <button class="filter-btn" onclick="filterProducts('cables')">كابلات</button>
+    <button class="filter-btn" onclick="filterProducts('chargers')">شواحن</button>
 </div>
 
 <!-- Products -->
 <div class="container mt-5">
     <div class="row g-4" id="productList">
 
-        <!-- Product 1 (الصورة الجديدة) -->
-        <div class="col-md-4 product-item" data-name="Samsung S22">
+        <!-- مثال: موبايل -->
+        <div class="col-md-4 product-item" data-category="mobiles" data-name="Samsung S22">
             <div class="product-card">
-                <img src="https://i.ibb.co/VcxDPkS7/IMG-20251123-121257.jpg" alt="Samsung S22">
+                <img src="https://i.ibb.co/VcxDPkS7/IMG-20251123-121257.jpg">
                 <div class="p-3">
                     <h4>Samsung S22</h4>
                     <div class="price">550$</div>
                     <a href="https://wa.me/963934090901?text=أريد%20شراء%20Samsung%20S22"
-                       target="_blank"
-                       class="btn btn-whatsapp w-100 mt-3">
-                        اطلب عبر واتساب
-                    </a>
+                       target="_blank" class="btn btn-whatsapp w-100 mt-3">اطلب عبر واتساب</a>
                 </div>
             </div>
         </div>
 
-        <!-- Product 2 -->
-        <div class="col-md-4 product-item" data-name="iPhone 14">
+        <!-- مثال: موبايل -->
+        <div class="col-md-4 product-item" data-category="mobiles" data-name="iPhone 14">
             <div class="product-card">
-                <img src="https://i.ibb.co/album/iPhone14.jpg" alt="iPhone 14">
+                <img src="https://i.ibb.co/album/iPhone14.jpg">
                 <div class="p-3">
                     <h4>iPhone 14</h4>
                     <div class="price">800$</div>
-                    <a href="https://wa.me/963934090901?text=أريد%20شراء%20iPhone%2014"
-                       target="_blank"
-                       class="btn btn-whatsapp w-100 mt-3">
-                        اطلب عبر واتساب
-                    </a>
+                    <a href="#" class="btn btn-whatsapp w-100 mt-3">اطلب عبر واتساب</a>
                 </div>
             </div>
         </div>
 
-        <!-- Product 3 -->
-        <div class="col-md-4 product-item" data-name="Samsung A54">
+        <!-- مثال: شاحن -->
+        <div class="col-md-4 product-item" data-category="chargers" data-name="Fast Charger 25W">
             <div class="product-card">
-                <img src="https://i.ibb.co/album/A54.jpg" alt="Samsung A54">
+                <img src="https://i.ibb.co/album/charger.jpg">
                 <div class="p-3">
-                    <h4>Samsung A54</h4>
-                    <div class="price">300$</div>
-                    <a href="https://wa.me/963934090901?text=أريد%20شراء%20Samsung%20A54"
-                       target="_blank"
-                       class="btn btn-whatsapp w-100 mt-3">
-                        اطلب عبر واتساب
-                    </a>
+                    <h4>شاحن سامسونغ 25W</h4>
+                    <div class="price">12$</div>
+                    <a href="#" class="btn btn-whatsapp w-100 mt-3">اطلب عبر واتساب</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- مثال: كابل -->
+        <div class="col-md-4 product-item" data-category="cables" data-name="Type C Cable">
+            <div class="product-card">
+                <img src="https://i.ibb.co/album/cable.jpg">
+                <div class="p-3">
+                    <h4>كابل Type-C</h4>
+                    <div class="price">5$</div>
+                    <a href="#" class="btn btn-whatsapp w-100 mt-3">اطلب عبر واتساب</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- مثال: سماعة بلوتوث -->
+        <div class="col-md-4 product-item" data-category="bluetooth" data-name="Bluetooth Headset">
+            <div class="product-card">
+                <img src="https://i.ibb.co/album/bluetooth.jpg">
+                <div class="p-3">
+                    <h4>سماعة بلوتوث</h4>
+                    <div class="price">15$</div>
+                    <a href="#" class="btn btn-whatsapp w-100 mt-3">اطلب عبر واتساب</a>
                 </div>
             </div>
         </div>
@@ -161,15 +190,24 @@
     © 2025 تكنو تل — جميع الحقوق محفوظة
 </footer>
 
-<!-- Search Script -->
+<!-- Scripts -->
 <script>
+function filterProducts(category) {
+    let items = document.getElementsByClassName("product-item");
+    for (let item of items) {
+        item.style.display = (category === "all" || item.dataset.category === category)
+            ? "block"
+            : "none";
+    }
+}
+
 function searchProducts() {
     let input = document.getElementById('searchInput').value.toLowerCase();
     let items = document.getElementsByClassName('product-item');
 
-    for (let i = 0; i < items.length; i++) {
-        let name = items[i].getAttribute('data-name').toLowerCase();
-        items[i].style.display = name.includes(input) ? "block" : "none";
+    for (let item of items) {
+        let name = item.getAttribute('data-name').toLowerCase();
+        item.style.display = name.includes(input) ? "block" : "none";
     }
 }
 </script>
