--- a/index.html
+++ b/index.html
@@ -1,110 +1,129 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>تكنو تل – متجر الموبايلات</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
-
-    <style>
-        body { font-family: 'Cairo', sans-serif; background: #f3f5f7; }
-
-        .navbar {
-            background: linear-gradient(90deg, #007bff, #0056d6);
-            padding: 15px 0;
-        }
-        .navbar-brand {
-            color: #fff !important;
-            font-size: 28px;
-            font-weight: 700;
-        }
-
-        .hero {
-            background: linear-gradient(135deg, #0056d6, #0090ff);
-            color: #fff;
-            padding: 70px 20px;
-            border-radius: 20px;
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .product-card {
-            border-radius: 18px;
-            overflow: hidden;
-            background: white;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.08);
-            transition: .3s;
-        }
-        .product-card:hover {
-            transform: translateY(-6px);
-            box-shadow: 0 8px 25px rgba(0,0,0,0.12);
-        }
-
-        .product-card img {
-            width: 100%;
-            height: 300px;
-            object-fit: cover;
-            border-bottom: 1px solid #ddd;
-        }
-
-        .price {
-            font-size: 22px;
-            color: #e91e63;
-            font-weight: bold;
-        }
-
-        .btn-whatsapp {
-            background: #25D366;
-            color: white;
-            font-size: 18px;
-        }
-
-        footer {
-            background: #0d6efd;
-            color: #fff;
-            padding: 20px;
-            margin-top: 50px;
-            text-align: center;
-        }
-
-        /* أزرار الفلاتر */
-        .filter-btn {
-            background: #0056d6;
-            color: #fff;
-            border: none;
-            padding: 10px 16px;
-            border-radius: 10px;
-            margin: 5px;
-            font-size: 16px;
-        }
-        .filter-btn:hover {
-            background: #003c9d;
-        }
-    </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>تكنو تل – متجر الموبايلات</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    body{font-family:'Cairo',sans-serif;background:#f3f5f7}
+    .navbar{background:linear-gradient(90deg,#007bff,#0056d6);padding:15px 0}
+    .navbar-brand{color:#fff!important;font-size:28px;font-weight:700}
+    .hero{background:linear-gradient(135deg,#0056d6,#0090ff);color:#fff;padding:60px 20px;border-radius:20px;text-align:center;margin-top:20px}
+    .product-card{border-radius:18px;overflow:hidden;background:#fff;box-shadow:0 4px 20px rgba(0,0,0,.08);transition:.3s}
+    .product-card:hover{transform:translateY(-6px);box-shadow:0 8px 25px rgba(0,0,0,.12)}
+    .product-card img{width:100%;height:300px;object-fit:cover;border-bottom:1px solid #ddd}
+    .price{font-size:22px;color:#e91e63;font-weight:700}
+    .btn-whatsapp{background:#25D366;color:#fff;font-size:18px}
+    footer{background:#0d6efd;color:#fff;padding:20px;margin-top:50px;text-align:center}
+    .filter-btn{background:#0056d6;color:#fff;border:none;padding:10px 16px;border-radius:10px;margin:5px;font-size:16px}
+    .filter-btn:hover{background:#003c9d}
+  </style>
 </head>
-
 <body>
 
-<!-- Navbar -->
 <nav class="navbar">
   <div class="container">
     <a class="navbar-brand" href="#">تكنو تل</a>
   </div>
 </nav>
 
-<!-- Hero -->
 <div class="container">
-    <div class="hero shadow">
-        <h1>مرحباً بكم في تكنو تل</h1>
-        <p>أحدث الموبايلات – أفضل الأسعار – اطلب عبر الواتساب مباشرة</p>
-    </div>
+  <div class="hero shadow">
+    <h1>مرحباً بكم في تكنو تل</h1>
+    <p>أحدث الموبايلات – أفضل الأسعار – اطلب عبر الواتساب مباشرة</p>
+  </div>
 </div>
 
-<!-- Search -->
 <div class="container mt-4">
-    <input id="searchInput" type="text" class="form-control form-control-lg text-center"
+  <input id="searchInput" type="text" class="form-control form-control-lg text-center" placeholder="ابحث عن جهاز..." oninput="applyFilters()">
+</div>
+
+<div class="container text-center mt-4">
+  <button class="filter-btn" onclick="setCategory('all')">كل المنتجات</button>
+  <button class="filter-btn" onclick="setCategory('mobiles')">موبايلات</button>
+  <button class="filter-btn" onclick="setCategory('bluetooth')">سماعات بلوتوث</button>
+  <button class="filter-btn" onclick="setCategory('cables')">كابلات</button>
+  <button class="filter-btn" onclick="setCategory('chargers')">شواحن</button>
+</div>
+
+<div class="container mt-5">
+  <div class="row g-4" id="productList"></div>
+</div>
+
+<footer>
+  © 2025 تكنو تل — جميع الحقوق محفوظة
+</footer>
+
+<script>
+const WA_PHONE = '963934090901'; // رقم الواتساب
+let PRODUCTS = [];
+let CURRENT_CATEGORY = 'all';
+
+async function loadProducts(){
+  try{
+    const res = await fetch('./products.json?_=' + Date.now());
+    PRODUCTS = await res.json();
+  }catch(e){
+    console.error('فشل تحميل products.json', e);
+    PRODUCTS = [];
+  }
+  renderProducts();
+}
+
+function renderProducts(){
+  const container = document.getElementById('productList');
+  container.innerHTML = '';
+  const query = document.getElementById('searchInput').value.toLowerCase();
+
+  const filtered = PRODUCTS.filter(p=>{
+    const matchCat = (CURRENT_CATEGORY === 'all') || (p.category === CURRENT_CATEGORY);
+    const matchText = (!query) || (p.name.toLowerCase().includes(query)) || (p.description && p.description.toLowerCase().includes(query));
+    return matchCat && matchText;
+  });
+
+  if(filtered.length === 0){
+    container.innerHTML = '<div class="col-12 text-center text-muted">لا توجد منتجات للعرض</div>';
+    return;
+  }
+
+  for(const p of filtered){
+    const col = document.createElement('div');
+    col.className = 'col-md-4 product-item';
+    col.innerHTML = `
+      <div class="product-card">
+        <img src="${p.image}" alt="${escapeHtml(p.name)}">
+        <div class="p-3">
+          <h4>${escapeHtml(p.name)}</h4>
+          <div class="price">${escapeHtml(p.price)}</div>
+          <p class="text-muted small">${p.description ? escapeHtml(p.description) : ''}</p>
+          <a href="https://wa.me/${WA_PHONE}?text=${encodeURIComponent('أريد شراء ' + p.name)}" target="_blank" class="btn btn-whatsapp w-100 mt-3">اطلب عبر واتساب</a>
+        </div>
+      </div>`;
+    container.appendChild(col);
+  }
+}
+
+function escapeHtml(str){
+  if(!str) return '';
+  return String(str).replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;');
+}
+
+function setCategory(cat){
+  CURRENT_CATEGORY = cat;
+  applyFilters();
+}
+
+function applyFilters(){
+  renderProducts();
+}
+
+// load on start
+loadProducts();
+</script>
+</body>
+</html>    <input id="searchInput" type="text" class="form-control form-control-lg text-center"
            placeholder="ابحث عن جهاز..."
            onkeyup="searchProducts()">
 </div>
