--- a/admin.html
+++ b/admin.html
@@ -3,28 +3,61 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Admin - تكنو تل</title>
+<title>Admin - تكنو تل (لوحة الإدارة المتقدمة)</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
-<style>body{font-family:'Cairo',sans-serif;background:#f7f9fc;padding:20px} .card{border-radius:12px}</style>
+<style>
+  body{font-family:'Cairo',sans-serif;background:#f7f9fc;padding:20px}
+  .card{border-radius:12px}
+  .btn-small{padding:.35rem .6rem;font-size:.85rem}
+  .status{margin-top:10px}
+  .img-thumb{width:64px;height:48px;object-fit:cover;border-radius:6px}
+  .muted{color:#6c757d}
+</style>
 </head>
 <body>
 <div class="container">
   <div class="card p-4">
-    <h3>لوحة إدارة منتجات — تكنو تل</h3>
-    <p class="text-muted">أمان: أدخل كلمة المرور للمتابعة. (غيّرها في الكود بعد النشر)</p>
+    <h3>لوحة إدارة — تكنو تل (ربط مباشر مع GitHub)</h3>
+    <p class="muted">لتأمين الصفحة: أدخل كلمة المرور ثم أدخل GitHub Token الخاص بك لمزامنة المنتجات أوتوماتيكياً.</p>
 
+    <!-- LOGIN -->
     <div id="loginBox">
-      <div class="mb-3">
-        <input id="pwd" type="password" class="form-control" placeholder="كلمة المرور">
+      <div class="row g-2">
+        <div class="col-md-6">
+          <input id="pwd" type="password" class="form-control" placeholder="كلمة المرور (غيرها فوراً)">
+        </div>
+        <div class="col-md-3">
+          <button class="btn btn-primary w-100" onclick="login()">دخول</button>
+        </div>
+        <div class="col-md-3">
+          <button class="btn btn-outline-secondary w-100" onclick="showTokenHelp()">مساعدة التوكن</button>
+        </div>
       </div>
-      <button class="btn btn-primary" onclick="login()">دخول</button>
     </div>
 
+    <!-- ADMIN UI -->
     <div id="adminUI" style="display:none;margin-top:20px">
-      <div class="mb-3 row">
+
+      <!-- Token -->
+      <div class="mb-3 row align-items-center">
+        <div class="col-md-8">
+          <input id="ghToken" class="form-control" placeholder="ضع GitHub Personal Access Token هنا (محلي فقط)">
+        </div>
+        <div class="col-md-2">
+          <button class="btn btn-success w-100" onclick="saveToken()">حفظ التوكن محلياً</button>
+        </div>
+        <div class="col-md-2">
+          <button class="btn btn-danger w-100" onclick="clearToken()">حذف التوكن</button>
+        </div>
+      </div>
+
+      <div class="mb-3 muted">الحالة: <span id="syncStatus">غير متصل</span></div>
+
+      <!-- Add Product Form -->
+      <div class="mb-3 row g-2 align-items-center">
         <div class="col-md-3"><input id="pName" class="form-control" placeholder="اسم المنتج"></div>
-        <div class="col-md-2"><input id="pPrice" class="form-control" placeholder="السعر"></div>
+        <div class="col-md-2"><input id="pPrice" class="form-control" placeholder="السعر (مثال: 120$)"></div>
         <div class="col-md-3"><input id="pImage" class="form-control" placeholder="رابط الصورة (URL)"></div>
         <div class="col-md-2">
           <select id="pCategory" class="form-control">
@@ -34,83 +67,285 @@
             <option value="chargers">شواحن</option>
           </select>
         </div>
-        <div class="col-md-2"><button class="btn btn-success w-100" onclick="addProduct()">أضف المنتج</button></div>
+        <div class="col-md-2"><button class="btn btn-primary w-100" onclick="addProduct()">أضف المنتج</button></div>
+      </div>
+
+      <div class="mb-3">
+        <small class="muted">بعد أي تعديل: يتم مزامنة التغييرات أوتوماتيكياً إلى GitHub (products.json)</small>
       </div>
 
       <h5>قائمة المنتجات</h5>
       <div id="list"></div>
 
       <hr>
-      <div class="mb-3">
-        <button class="btn btn-primary" onclick="copyJSON()">نسخ JSON للحافظة</button>
-        <button class="btn btn-secondary" onclick="downloadJSON()">تحميل products.json</button>
+      <div class="d-flex gap-2">
+        <button class="btn btn-outline-secondary" onclick="manualSync()">مزامنة الآن</button>
+        <button class="btn btn-outline-dark" onclick="downloadJSON()">تحميل JSON</button>
+        <button class="btn btn-outline-info" onclick="copyJSON()">نسخ JSON</button>
       </div>
 
-      <p class="text-muted">بعد تعديل أو نسخ JSON: اذهب إلى GitHub → افتح ملف <code>products.json</code> → اضغط Edit → الصق JSON → Commit changes.</p>
+      <div class="status" id="statusBox"></div>
+      <div class="mt-3 muted">ملاحظة: التوكن يبقى فقط في متصفحك (localStorage). إذا أردت حذف الوصول، اضغط 'حذف التوكن' أو امسح بيانات المتصفح.</div>
     </div>
   </div>
 </div>
 
 <script>
-const ADMIN_PASSWORD = 't3chn0tel'; // غيّرها فوراً بعد النشر
-let products = [];
+/* ========== ضبط الحساب والريبو =========== */
+const GITHUB_USER = 'redcresce';     // تأكد هذا
+const GITHUB_REPO = 'Techno1';       // تأكد هذا
+const GITHUB_PATH = 'products.json'; // ملف المنتجات
+const ADMIN_PASSWORD = 't3chn0tel';  // غيّره فوراً بعد النشر
 
+/* ========== حالة محلية ========= */
+let products = [];
+let tokenKey = 'techno_admin_token_v1';
+let token = localStorage.getItem(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) || '';
+
+/* ========== عناصر DOM ========= */
+const loginBox = document.getElementById('loginBox');
+const adminUI = document.getElementById('adminUI');
+const ghTokenInput = document.getElementById('ghToken');
+const syncStatus = document.getElementById('syncStatus');
+const statusBox = document.getElementById('statusBox');
+const listDiv = document.getElementById('list');
+
+/* ========== Helpers ========= */
+function setStatus(msg, ok=true){
+  syncStatus.textContent = msg;
+  syncStatus.style.color = ok ? 'green' : 'red';
+  statusBox.innerHTML = `<div class="alert ${ok ? 'alert-success' : 'alert-danger'}">${msg}</div>`;
+  setTimeout(()=>{ statusBox.innerHTML = '' }, 3500);
+}
+function showTokenHelp(){
+  alert('لإنشاء GitHub Personal Access Token:\n1) افتح GitHub -> Settings -> Developer settings -> Personal access tokens -> Tokens (classic) -> Generate new token.\n2) اختر صلاحية repo (أو public_repo لو الريبو عام فقط).\n3) انسخ التوكن والصقه هنا. التوكن سيبقى على جهازك فقط.');
+}
+
+/* ======== Login ======= */
 function login(){
   const v = document.getElementById('pwd').value;
   if(v === ADMIN_PASSWORD){
-    document.getElementById('loginBox').style.display = 'none';
-    document.getElementById('adminUI').style.display = 'block';
-    loadExisting();
-  }else{ alert('كلمة المرور خاطئة'); }
+    loginBox.style.display = 'none';
+    adminUI.style.display = 'block';
+    ghTokenInput.value = token || '';
+    initAdmin();
+  } else {
+    alert('كلمة المرور خاطئة');
+  }
 }
 
-async function loadExisting(){
+/* ======== Token Storage ======= */
+function saveToken(){
+  const t = ghTokenInput.value.trim();
+  if(!t){ alert('أدخل التوكن أولاً'); return; }
+  localStorage.setItem(tokenKey, t);
+  token = t;
+  setStatus('التوكن محفوظ محلياً. جاهز للمزامنة.', true);
+  // حاول التحميل والمزامنة الآن
+  loadAndRender().then(()=>syncToGitHubIfNeeded());
+}
+function clearToken(){
+  localStorage.removeItem(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);
+  token = '';
+  ghTokenInput.value = '';
+  setStatus('تم حذف التوكن من المتصفح.', false);
+}
+
+/* ======== Load products from GitHub (or empty) ======= */
+async function loadProductsFromGitHub(){
+  const apiUrl = `https://api.github.com/repos/${GITHUB_USER}/${GITHUB_REPO}/contents/${GITHUB_PATH}`;
   try{
-    const res = await fetch('./products.json?_=' + Date.now());
-    products = await res.json();
-  }catch(e){ products = []; }
-  renderList();
+    const r = await fetch(apiUrl + '?_=' + Date.now(), { headers: token ? { Authorization: 'token ' + token } : {} });
+    if(r.status === 404){
+      // file not found -> return empty
+      return { items: [], sha: null };
+    }
+    if(!r.ok) throw new Error('فشل جلب products.json: ' + r.status);
+    const json = await r.json();
+    const sha = json.sha;
+    const content = atob(json.content.replace(/\n/g, ''));
+    const data = JSON.parse(content || '[]');
+    return { items: data, sha };
+  }catch(err){
+    console.error(err);
+    throw err;
+  }
 }
 
+/* ======== Render list in admin UI ======= */
 function renderList(){
-  const list = document.getElementById('list');
-  list.innerHTML = '';
-  products.forEach((p, i)=>{
-    const div = document.createElement('div');
-    div.className = 'card p-2 mb-2';
-    div.innerHTML = `
+  listDiv.innerHTML = '';
+  if(!products || products.length === 0){
+    listDiv.innerHTML = '<div class="text-muted">لا توجد منتجات بعد.</div>';
+    return;
+  }
+  products.forEach((p, i) => {
+    const card = document.createElement('div');
+    card.className = 'card p-2 mb-2';
+    card.innerHTML = `
       <div class="row align-items-center">
-        <div class="col-2"><img src="${p.image}" style="width:100%"/></div>
+        <div class="col-2"><img src="${p.image}" class="img-thumb" onerror="this.src='data:image/svg+xml;utf8,<svg xmlns=\\'http://www.w3.org/2000/svg\\' width=64 height=48><rect width=100% height=100% fill=%23ddd/></svg>'" /></div>
         <div class="col-6">
-          <b>${escapeHtml(p.name)}</b><br><small class="text-muted">${escapeHtml(p.price)} • ${escapeHtml(p.category)}</small>
+          <b>${escapeHtml(p.name)}</b><br><small class="text-muted">${escapeHtml(p.price)} • ${escapeHtml(p.category)}</small><br>
+          <small class="muted">${p.description ? escapeHtml(p.description) : ''}</small>
         </div>
         <div class="col-4 text-end">
-          <button class="btn btn-sm btn-warning" onclick="editProduct(${i})">تعديل</button>
-          <button class="btn btn-sm btn-danger" onclick="deleteProduct(${i})">حذف</button>
+          <button class="btn btn-sm btn-warning btn-small" onclick="editProduct(${i})">تعديل</button>
+          <button class="btn btn-sm btn-danger btn-small" onclick="deleteProduct(${i})">حذف</button>
         </div>
       </div>`;
-    list.appendChild(div);
+    listDiv.appendChild(card);
   });
 }
 
+/* ======== CRUD ======= */
 function addProduct(){
   const name = document.getElementById('pName').value.trim();
   const price = document.getElementById('pPrice').value.trim();
   const image = document.getElementById('pImage').value.trim();
   const category = document.getElementById('pCategory').value;
   if(!name || !image){ alert('يرجى إدخال اسم ورابط صورة'); return; }
-  products.push({name, price, image, category});
-  clearForm(); renderList();
+  const newP = { name, price, image, category, description: '' };
+  products.push(newP);
+  renderList();
+  autoSync(); // مزامنة تلقائية
+  clearForm();
 }
-
 function clearForm(){ document.getElementById('pName').value=''; document.getElementById('pPrice').value=''; document.getElementById('pImage').value=''; }
-
 function editProduct(i){
   const p = products[i];
-  const newName = prompt('اسم المنتج', p.name);
-  if(newName===null) return;
-  const newPrice = prompt('السعر', p.price);
-  if(newPrice===null) return;
+  const newName = prompt('اسم المنتج:', p.name);
+  if(newName === null) return;
+  const newPrice = prompt('السعر:', p.price);
+  if(newPrice === null) return;
+  const newImage = prompt('رابط الصورة:', p.image);
+  if(newImage === null) return;
+  const newCat = prompt('القسم (mobiles / bluetooth / cables / chargers):', p.category);
+  if(newCat === null) return;
+  const newDesc = prompt('الوصف (اختياري):', p.description || '');
+  if(newDesc === null) return;
+  products[i] = { name: newName.trim(), price: newPrice.trim(), image: newImage.trim(), category: newCat.trim(), description: newDesc.trim() };
+  renderList();
+  autoSync();
+}
+function deleteProduct(i){
+  if(!confirm('حذف المنتج نهائياً؟')) return;
+  products.splice(i,1);
+  renderList();
+  autoSync();
+}
+
+/* ======== Auto sync logic ======= */
+let autoTimer = null;
+function autoSync(){
+  // مزامنة فورية بعد أي تغيير (يمكن تجميعها بفاصل لو حبيت)
+  if(!token){
+    setStatus('التوكن غير موجود. احفظ التوكن ليتم المزامنة.', false);
+    return;
+  }
+  // debounce سريع: لو تغييرات سريعة، نجمعها خلال 700ms
+  if(autoTimer) clearTimeout(autoTimer);
+  autoTimer = setTimeout(()=>{ pushProductsToGitHub(products).catch(err=>console.error(err)); }, 700);
+}
+
+/* ======== GitHub interaction ======= */
+async function pushProductsToGitHub(items){
+  try{
+    setStatus('جارٍ المزامنة مع GitHub...', true);
+    // احصل على SHA الحالي (لو موجود)
+    const apiUrl = `https://api.github.com/repos/${GITHUB_USER}/${GITHUB_REPO}/contents/${GITHUB_PATH}`;
+    let sha = null;
+    // طلب GET مع التوكن
+    const getResp = await fetch(apiUrl + '?_=' + Date.now(), { headers: { Authorization: 'token ' + token } });
+    if(getResp.status === 200){
+      const j = await getResp.json();
+      sha = j.sha;
+    } else if(getResp.status === 404){
+      sha = null; // سننشئ الملف
+    } else if(getResp.status === 401 || getResp.status === 403){
+      throw new Error('خطأ صلاحيات أو توكن غير صالح (401/403). تأكد من صلاحيات التوكن (repo/public_repo).');
+    } else {
+      // قد يكون خطأ آخر؛ حاول قراءته
+      const txt = await getResp.text();
+      throw new Error('فشل جلب SHA: ' + getResp.status + ' - ' + txt);
+    }
+
+    // جهز المحتوى
+    const bodyStr = JSON.stringify(items, null, 2);
+    const base64 = btoa(unescape(encodeURIComponent(bodyStr))); // دعم UTF-8
+
+    const putBody = {
+      message: `Auto-update products.json via admin panel (${new Date().toISOString()})`,
+      content: base64
+    };
+    if(sha) putBody.sha = sha;
+
+    const putResp = await fetch(apiUrl, {
+      method: 'PUT',
+      headers: {
+        Authorization: 'token ' + token,
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify(putBody)
+    });
+
+    if(!putResp.ok){
+      const errText = await putResp.text();
+      throw new Error('فشل رفع الملف: ' + putResp.status + ' — ' + errText);
+    }
+
+    const putJson = await putResp.json();
+    setStatus('تمت المزامنة بنجاح. Commit: ' + putJson.commit.sha, true);
+    return putJson;
+  }catch(err){
+    console.error(err);
+    setStatus('فشل المزامنة: ' + (err.message||err), false);
+    throw err;
+  }
+}
+
+/* ======== Manual sync & utilities ======= */
+async function manualSync(){
+  if(!token){ alert('التوكن غير موجود'); return; }
+  try{
+    await pushProductsToGitHub(products);
+  }catch(e){
+    console.error(e);
+  }
+}
+function copyJSON(){ navigator.clipboard.writeText(JSON.stringify(products, null, 2)).then(()=>alert('تم نسخ JSON')); }
+function downloadJSON(){ const dataStr = 'data:text/json;charset=utf-8,' + encodeURIComponent(JSON.stringify(products, null, 2)); const a = document.createElement('a'); a.href = dataStr; a.download = 'products.json'; document.body.appendChild(a); a.click(); a.remove(); }
+
+/* ======== Initial load & sync helper ======= */
+async function loadAndRender(){
+  try{
+    const res = await loadProductsFromGitHub();
+    products = res.items || [];
+    renderList();
+    setStatus('تم تحميل products.json من GitHub', true);
+  }catch(err){
+    products = [];
+    renderList();
+    setStatus('لم يتمكن من تحميل products.json (ستعمل بملف محلي مؤقت)', false);
+  }
+}
+
+/* ======== Run when admin opened ======= */
+function initAdmin(){
+  // ضع التوكن الموجود (لو أي)
+  token = localStorage.getItem(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) || '';
+  ghTokenInput.value = token;
+  loadAndRender();
+}
+
+/* ======== small helpers ======= */
+function escapeHtml(s){ if(!s) return ''; return String(s).replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;'); }
+
+/* ======== Auto init: لو مسجل دخول سابقاً (optional) ======= */
+// (لا نفعل تسجيل تلقائي للحماية؛ انت تضغط دخول يدوياً)
+</script>
+</body>
+</html>  if(newPrice===null) return;
   const newImage = prompt('رابط الصورة', p.image);
   if(newImage===null) return;
   const newCat = prompt('القسم (mobiles / bluetooth / cables / chargers)', p.category);
